--- a/public/views/movies/movie.html
+++ b/public/views/movies/movie.html
@@ -35,8 +35,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="appleButton col-md-2 col-sm-6 col-xs-offset-0">
-                    <a href="{{movie.trackViewUrl}}"></a>
+                <div class="col-md-2 col-sm-6 col-xs-offset-0">
+                    <a class="appleButton" href="{{movie.trackViewUrl}}"></a>
                 </div>
             </div>
             <div class="row jumbotron">
