--- a/public/views/movie.html
+++ b/public/views/movie.html
@@ -51,21 +51,13 @@
                     <!-- /.modal -->
 
                 </div>
-                <div class="appleButton col-md-2 col-sm-6 col-xs-offset-0">
-                    <a href="https://geo.itunes.apple.com/fr/movie/cinquante-nuances-de-grey/id962931571?mt=6"></a>
+                <div class="col-md-2 col-sm-6 col-xs-offset-0">
+                    <a class="appleButton" ng-href="{{movie.trackViewUrl}}"></a>
                 </div>
             </div>
             <div class="row jumbotron">
                 <p>
-                    When Anastasia Steele, a literature student, goes to interview the wealthy Christian Grey as a favor
-                    to her roommate Kate Kavanagh, she encounters a beautiful, brilliant and intimidating man. The
-                    innocent and naive Ana starts to realize she wants him. Despite his enigmatic reserve and advice,
-                    she finds herself desperate to get close to him. Not able to resist Ana's beauty and independent
-                    spirit, Christian Grey admits he wants her too, but on his own terms. Ana hesitates as she discovers
-                    the singular tastes of Christian Grey - despite the embellishments of success, his multinational
-                    businesses, his vast wealth, and his loving family, Grey is consumed by the need to control
-                    everything.
-                </p>
+                  {{movie.longDescription}}
             </div>
         </div>
         <img class="col-md-4  col-sm-4 col-xs-12"
