--- a/public/views/movie.html
+++ b/public/views/movie.html
@@ -61,7 +61,7 @@
             </div>
         </div>
         <img class="col-md-4  col-sm-4 col-xs-12"
-             src="http://ia.media-imdb.com/images/M/MV5BMjE1MTM4NDAzOF5BMl5BanBnXkFtZTgwNTMwNjI0MzE@._V1_SX640_SY720_.jpg">
+             ng-src="{{movie.artworkUrl100}}">
     </div>
 
 </div>
