--- a/public/views/actor.html
+++ b/public/views/actor.html
@@ -3,7 +3,7 @@
 <div class="container-fluid main-container">
 
     <div class="row">
-        <div class="col-md-12 col-sm-12 col-xs-12" ng-controller="ActorCtrl" ng-init="getActor(95221335)">
+        <div class="col-md-12 col-sm-12 col-xs-12" ng-controller="ActorCtrl">
             <h1>{{actor.artistName}}</h1>
             <h4>{{actor.primaryGenreName}}</h4>
         </div>
