--- a/public/views/actor.html
+++ b/public/views/actor.html
@@ -9,7 +9,7 @@
         </div>
     </div>
 
-    <div class="movies" ng-controller="ActorMoviesCtrl" ng-init="getActorMovies(95221335)">
+    <div class="movies" ng-controller="ActorMoviesCtrl">
         <div class="row">
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <h2>Movies</h2>
@@ -17,7 +17,7 @@
         </div>
         <div class="row" ng-repeat="movie in actorMovies">
             <div class="movie-image col-md-2 col-sm-2 col-xs-12">
-                <img class="thumbnail" src="{{movie.artworkUrl100}}"/>
+                <img class="thumbnail" ng-src="{{movie.artworkUrl100}}"/>
             </div>
             <div class="col-md-6 col-sm-9 col-xs-12">
                 <div class="panel panel-info">
