--- a/public/views/home.html
+++ b/public/views/home.html
@@ -27,9 +27,8 @@
           <h4 class="gray">Actor</h4>
 
           <div class="list-group">
-            <a ui-sref="actor({ actorId: 253584821 })" class="list-group-item">John Sawyer</a>
-            <a ui-sref="actor({ actorId: 95221335 })" class="list-group-item"></a>
-            <a ui-sref="actor({ actorId: 2082973 })" class="list-group-item"></a>
+            <a ui-sref="actor({ actorId: 95221335 })" class="list-group-item">Joaquim Phoenix</a>
+            <a ui-sref="actor({ actorId: 2082973 })" class="list-group-item">Scarlett Johansson</a>
           </div>
 
         </div>
