--- a/public/views/movie.html
+++ b/public/views/movie.html
@@ -37,18 +37,15 @@
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <h4 class="modal-title">Fifty Shades of Grey - Bande Annonce</h4>
+                                    <h4 class="modal-title">{{movie.trackName}} - Bande Annonce</h4>
                                 </div>
                                 <div class="modal-body">
                                     <iframe width=100% height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ"
                                             frameborder="0" allowfullscreen></iframe>
                                 </div>
                             </div>
-                            <!-- /.modal-content -->
                         </div>
-                        <!-- /.modal-dialog -->
                     </div>
-                    <!-- /.modal -->
 
                 </div>
                 <div class="col-md-2 col-sm-6 col-xs-offset-0">
