--- a/public/views/tvshow.html
+++ b/public/views/tvshow.html
@@ -15,39 +15,24 @@
                         </ul>
                     </div>
                 </div>
-                <div id="previewButton" class="col-md-4 col-sm-6 col-xs-12">
-                    <button type="button" class="btn btn-info btn-lg" data-toggle="modal"
-                            data-target="#myVideoModal">
+                <div id="mediaControl" class="col-md-4 col-sm-6 col-xs-12">
+                    <button type="button" class="btn btn-info" data-toggle="modal" data-target="#preview">
                         Trailer
                     </button>
-                    <div id="myVideoModal" class="modal fade" role="dialog">
+                    <div id="preview" class="modal fade">
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <h4 class="modal-title">{{TVshowInfo.artistName}} - Trailer</h4>
+                                    <h4 class="modal-title">{{TVshowInfo.artistName}} - Bande Annonce</h4>
                                 </div>
                                 <div class="modal-body">
-                                    <div ng-if="!TVshowEpisodes[0].previewUrl">
-                                        <iframe width="100%" height="315"
-                                                src="https://www.youtube.com/embed/s9SJSC1ve-I" frameborder="0"
-                                                allowfullscreen></iframe>
-
-                                    </div>
-
-                                    <div ng-if="TVshowEpisodes[0].previewUrl">
-                                        <video width="320" height="240" controls>
-                                            <source ng-src="TVshowEpisodes[0].previewUrl" type="video/mp4">
-                                            Your browser does not support the video tag.
-                                        </video>
-                                        <p>
-                                            <a ng-href="{{TVshowEpisodes[0].previewUrl}}">Lien alternatif.</a>
-                                        </p>
-                                    </div>
+                                    <iframe src="{{videoLink1}}" width=100% height="315" frameborder="0" allowfullscreen></iframe>
                                 </div>
                             </div>
                         </div>
                     </div>
+
                 </div>
                 <div class="col-md-2 col-sm-6 col-xs-offset-0">
                     <a class="appleButton" href="{{TVshowSeason[1].artistViewUrl}}"></a>
