--- a/public/views/movie.html
+++ b/public/views/movie.html
@@ -29,7 +29,7 @@
                     <button type="button" class="btn btn-info" data-toggle="modal" data-target="#preview">
                         Trailer
                     </button>
-                  <button type="button" class="btn btn-success" ng-controller="AddMovieModalCtrl" ng-click="addToWatchlist(movie)">
+                  <button type="button" class="btn btn-success" ng-controller="AddMovieModalCtrl" ng-click="addToWatchlist(movie, user)">
                       Add to Watchlist
                   </button>
                     <div id="preview" class="modal fade">
