--- a/public/views/user/profile.html
+++ b/public/views/user/profile.html
@@ -2,11 +2,16 @@
 
 <div class="container-fluid main-container">
   <div class="row">
-    <div class="col-md-12 col-sm-12 col-xs-12">
+    <div class="col-md-8 col-sm-8 col-xs-12">
 
-      <h1>Profile</h1>
-      <h2>{{user.name}}</h2>
+
+      <h1>{{user.name}}'s Profile</h1>
       <h3>{{user.email}}</h3>
+      <div>
+        <button type="button" class="btn btn-info">Follow {{user.name}}</button>
+      </div>
+
+      <div ng-controller="WatchlistsCtrl" ng-include="'template/watchlists.html'"></div>
 
     </div>
   </div>
