--- a/public/views/movie.html
+++ b/public/views/movie.html
@@ -40,8 +40,7 @@
                                     <h4 class="modal-title">{{movie.trackName}} - Bande Annonce</h4>
                                 </div>
                                 <div class="modal-body">
-                                    <iframe width=100% height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ"
-                                            frameborder="0" allowfullscreen></iframe>
+                                    <iframe ng-src="{{videoLink | trustThisUrl}}" width=100% height="315" frameborder="0" allowfullscreen></iframe>
                                 </div>
                             </div>
                         </div>
