--- a/public/views/tvshow.html
+++ b/public/views/tvshow.html
@@ -20,18 +20,18 @@
                         Trailer
                     </button>
                     <div id="preview" class="modal fade">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <h4 class="modal-title">{{TVshowInfo.artistName}} - Bande Annonce</h4>
-                                </div>
-                                <div class="modal-body">
-                                    <iframe ng-src="{{videoLink | trustThisUrl}}" width=100% height="315" frameborder="0" allowfullscreen></iframe>
-                                </div>
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <h4 class="modal-title">{{TVshowInfo.artistName}} - Bande Annonce</h4>
+                            </div>
+                            <div class="modal-body">
+                                <iframe ng-src="{{videoLink | trustThisUrl}}" width=100% height="315" frameborder="0" allowfullscreen></iframe>
                             </div>
                         </div>
                     </div>
+                </div>
 
                 </div>
                 <div class="col-md-2 col-sm-6 col-xs-offset-0">
@@ -57,11 +57,30 @@
                             </accordion-heading>
                             <ol>
                                 <li ng-repeat="episode in TVshowEpisodes | orderBy : '+trackNumber' | filter :{collectionName:season.collectionName}">
-                                    {{episode.trackCensoredName}}
+                                    <button type="button" class="btn btn-default btn-sm" ng-click="selectEpisode(episode)">{{episode.trackCensoredName}}</button>
                                 </li>
                             </ol>
                         </accordion-group>
                     </accordion>
+                </div>
+            </div>
+            <div id="episodeModal" class="modal fade">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">{{seasonNameToShow}} - {{episodeToShow}}</h4>
+                        </div>
+                        <div class="modal-body">
+                            <iframe ng-src="{{videoLink | trustThisUrl}}" width=100% height="315" frameborder="0" allowfullscreen></iframe>
+                            <h3>Summary</h3>
+                            <h5>Durarion : {{episodeDuration}}</h5>
+                            <p>{{episodeDescription}}</p>
+                        </div>
+                        <div class="description">
+
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
