--- a/public/views/movie.html
+++ b/public/views/movie.html
@@ -40,7 +40,7 @@
                                     <h4 class="modal-title">{{movie.trackName}} - Bande Annonce</h4>
                                 </div>
                                 <div class="modal-body">
-                                    <iframe width=100% height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+                                    <iframe width=100% height="315" ng-src="{{videoLink | trustThisUrl}}"
                                             frameborder="0" allowfullscreen></iframe>
                                 </div>
                             </div>
@@ -58,7 +58,7 @@
             </div>
         </div>
         <img class="col-md-4  col-sm-4 col-xs-12"
-             ng-src="{{movie.artworkUrl100}}">
+             ng-src="{{movie.artworkUrl500}}">
     </div>
 
 </div>
