--- a/public/views/home.html
+++ b/public/views/home.html
@@ -31,6 +31,12 @@
             <a ui-sref="actor({ actorId: 2082973 })" class="list-group-item">Scarlett Johansson</a>
           </div>
 
+          <h4 class="gray">Users</h4>
+
+          <div class="list-group" ng-repeat="user in users">
+            <a ui-sref="profile({ userId: user.id })" class="list-group-item">{{user.name}}</a>
+          </div>
+
         </div>
     </div>
 
