--- a/public/views/user/profile.html
+++ b/public/views/user/profile.html
@@ -4,11 +4,27 @@
   <div class="row">
     <div class="col-md-8 col-sm-8 col-xs-12">
 
+      <div ng-if="me.id !== user.id">
+        <h1>{{user.name}}'s Profile</h1>
+        <h3>{{user.email}}</h3>
 
-      <h1>{{user.name}}'s Profile</h1>
-      <h3>{{user.email}}</h3>
-      <div>
-        <button type="button" class="btn btn-info">Follow {{user.name}}</button>
+        <button ng-show="!isFriend(following)" type="button" ng-click="addFriend(user.id)" class="btn btn-info">Follow {{user.name}}</button>
+        <button ng-show="isFriend(following)" type="button" ng-click="removeFriend(user)" class="btn btn-danger">Unfollow {{user.name}}</button>
+
+        <h4>Friends</h4>
+        <ul ng-repeat="friend in user.following">
+          <li><a ui-sref="profile({ userId: friend.id })">{{friend.name}}</a></li>
+        </ul>
+      </div>
+
+      <div ng-if="me.id === user.id">
+        <h1>My Profile</h1>
+        <h3>{{user.email}}</h3>
+
+        <h4>My Friends </h4>
+        <ul ng-repeat="friend in me.following">
+          <li><a ui-sref="profile({ userId: friend.id })">{{friend.name}}</a></li>
+        </ul>
       </div>
 
       <div ng-controller="WatchlistsCtrl" ng-include="'template/watchlists.html'"></div>
