--- a/public/views/search.html
+++ b/public/views/search.html
@@ -9,7 +9,7 @@
                 <p>
                     <ng-pluralize count="searchResults[0].resultCount" when="{'0': 'No results', 'one': '1 result', 'other': '{} results'}"></ng-pluralize>
                 </p>
-                <div class="btn-group" data-toggle="buttons">
+                <div class="btn-group search-control" data-toggle="buttons">
                     <label class="btn btn-default" ng-click="myFilter.wrapperType='track'">
                         <input type="radio" name="typeFilter" id="typeFilter1" autocomplete="off">Movies
                     </label>
@@ -23,7 +23,7 @@
                         <input type="radio" name="typeFilter" id="typeFilter4" autocomplete="off" checked>None
                     </label>
                 </div>
-                <div class="btn-group" data-toggle="buttons">
+                <div class="btn-group search-control" data-toggle="buttons">
                     <label class="btn btn-default" ng-click="myFilter.primaryGenreName='Comedy'">
                         <input type="radio" name="genderFilter" id="genderFilter1" autocomplete="off">Comedy
                     </label>
@@ -40,40 +40,32 @@
 
                 <dir-pagination-controls max-size="7" boundary-links="true" template-url="views/pagination.html"></dir-pagination-controls>
 
-                <table class="table">
-                    <thead>
-                    <tr>
-                        <th>Image</th>
-                        <th>Title</th>
-                        <th>Watchlist</th>
-                    </tr>
-
-                    <tr dir-paginate="result in searchResults[0].results | filter:myFilter | itemsPerPage: pageSize" current-page="currentPage">
-                        <td>
-                            <div class="artwork">
-                                <img ng-src="{{result.artworkUrl100}}">
-                            </div>
-                        </td>
-                        <td>
-                            <div ng-switch on="result.wrapperType">
-                                <a ng-switch-when="collection" ui-sref="tvshow({seasonId: result.trackId})">
-                                    {{result.collectionName}}
-                                </a>
-                                <a ng-switch-when="track" ui-sref="movie({movieId: result.trackId})">
-                                    {{result.trackName}}
-                                </a>
-                                <a ng-switch-when="artist" ui-sref="actor({actorId: result.artistId})">
-                                    {{result.artistName}}
-                                </a>
-                                <a ng-switch-default>
-                                    ERROR
-                                </a>
-                            </div>
-                        </td>
-                        <td>{{result.trackId}}</td>
-                    </tr></tbody>
-                </table>
-
+                <div class="text-center">
+                    <div class="row">
+                        <div class="col-md-8">
+                            <div class="well">Titre</div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="well">watchlist</div>
+                        </div>
+                    </div>
+                    <div class="row" dir-paginate="result in searchResults[0].results | filter:myFilter | itemsPerPage: pageSize" current-page="currentPage">
+                        <div ng-switch on="result.wrapperType">
+                            <a ng-switch-when="collection">
+                                <resultdetailstvshow></resultdetailstvshow>
+                            </a>
+                            <a ng-switch-when="track">
+                                <resultdetailsmovie></resultdetailsmovie>
+                            </a>
+                            <a ng-switch-when="artist">
+                                <resultdetailsartist></resultdetailsartist>
+                            </a>
+                            <a ng-switch-default>
+                            ERROR
+                            </a>
+                        </div>
+                    </div>
+                </div>
                 <dir-pagination-controls max-size="7" boundary-links="true" template-url="views/pagination.html"></dir-pagination-controls>
 
             </div>
@@ -82,9 +74,15 @@
                 <h1>Users</h1>
                 <ng-pluralize count="searchUsersResults[0].length" when="{'0': 'No user found.', 'one': '1 result', 'other': '{} results'}"></ng-pluralize>
 
-                <div ng-repeat="user in searchUsersResults[0]">
-                    <div>
-                        {{user.name}}
+                <div class="media" ng-repeat="user in searchUsersResults[0]">
+                    <div class="media-left">
+                        <a href="#">
+                            <img class="img-circle search-user-icon" ng-src="{{getGravatar(user.email)}}">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading">{{user.name}}</h4>
+                        <button type="button" class="btn btn-primary btn-xs">Follow</button>
                     </div>
                 </div>
             </div>
