--- a/public/views/search.html
+++ b/public/views/search.html
@@ -81,7 +81,7 @@
                         </a>
                     </div>
                     <div class="media-body">
-                        <h4 class="media-heading">{{user.name}}</h4>
+                        <h4 class="media-heading" ui-sref="profile({userId: user.id})">{{user.name}}</h4>
                         <button type="button" class="btn btn-primary btn-xs">Follow</button>
                     </div>
                 </div>
