--- a/public/template/preview-modal.html
+++ b/public/template/preview-modal.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal">&times;</button>
-   <h4 class="modal-title">{{movie.trackName}} - Bande Annonce</h4>
+   <h4 class="modal-title">{{title}} - Bande Annonce</h4>
 </div>
 <div class="modal-body">
     <iframe width=100% height="315" ng-src="{{videoLink | trustThisUrl}}"
