--- a/public/views/tvshow.html
+++ b/public/views/tvshow.html
@@ -16,21 +16,10 @@
                     </div>
                 </div>
                 <div id="mediaControl" class="col-md-4 col-sm-6 col-xs-12">
-                    <button type="button" class="btn btn-info" data-toggle="modal" data-target="#preview" ng-click="getVideoLink(TVshowInfo.artistName)">
+                    <button type="button" class="btn btn-info" ng-click="openPreview()">
                         Trailer
                     </button>
                     <div id="preview" class="modal fade">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                <h4 class="modal-title">{{TVshowInfo.artistName}} - Bande Annonce</h4>
-                            </div>
-                            <div class="modal-body">
-                                <iframe ng-src="{{videoLink | trustThisUrl}}" width=100% height="315" frameborder="0" allowfullscreen></iframe>
-                            </div>
-                        </div>
-                    </div>
                 </div>
 
                 </div>
