Ajout bouton addToWatchlist dans search

--- a/public/template/result-details-movie.html
+++ b/public/template/result-details-movie.html
@@ -7,4 +7,7 @@
     </a>
 </div>
 <div class="col-md-4">
+    <button type="button" class="btn btn-success" ng-controller="AddMovieModalCtrl" ng-click="addToWatchlist(result, user)">
+        Add to Watchlist
+    </button>
 </div>
