--- a/public/template/navbar.html
+++ b/public/template/navbar.html
@@ -16,7 +16,7 @@
                     <div class="input-group">
 
                       <input name="q" type="text" ng-model="SearchStringService.searchString" class="form-control" placeholder="Search..."
-                             uib-typeahead="trackName for trackName in getMovies($viewValue)" typeahead-wait-ms="10" class="form-control">
+                             uib-typeahead="trackName for trackName in getMovies($viewValue)" typeahead-wait-ms="10" class="form-control" autocomplete="off">
 
 
 
