--- a/public/template/result-details-tvshow.html
+++ b/public/template/result-details-tvshow.html
@@ -2,7 +2,7 @@
     <img class="img-thumbnail search-image" ng-src="{{result.artworkUrl100}}">
 </div>
 <div class="col-md-6">
-    <a ui-sref="tvshow({seasonId: result.trackId})">
+    <a ui-sref="tvshow({seasonId: result.artistId})">
         {{result.collectionName}}
     </a>
 </div>
